@@ -1,3 +1,6 @@
+## Delete launch.json, settings.json -> Run -> Add Configration -> add to launch.json: "vmArgs": "--module-path /Users/ericsali/Documents/javafx-sdk-19/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing" -> add references (javafx .jar files) to the same path above.
+
+
 ## Getting Started
 
 Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
